--- a/AplicaciónTrimestre/Views/Compra/Index.cshtml
+++ b/AplicaciónTrimestre/Views/Compra/Index.cshtml
@@ -1,27 +1,31 @@
 ﻿@model IEnumerable<AplicaciónTrimestre.Models.compra>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Compras";
 }
 
-<h2>Index</h2>
+<h2>Compras</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Compra", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.fecha)
+            @*@Html.DisplayNameFor(model => model.fecha)*@
+            Fecha Compra
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.total)
+            @*@Html.DisplayNameFor(model => model.total)*@
+            Total
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.id_usuario)
+            @*@Html.DisplayNameFor(model => model.id_usuario)*@
+            Nombre Usuario
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.id_cliente)
+            @*@Html.DisplayNameFor(model => model.id_cliente)*@
+            Nombre Cliente
         </th>
         <th></th>
     </tr>
@@ -44,9 +48,9 @@
                 @AplicaciónTrimestre.Controllers.CompraController.NombreCliente(item.id_cliente)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.id }, new { @class = "linkDelete" })
+                @Html.ActionLink("Editar", "Edit", new { id = item.id }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.id }) |
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.id }, new { @class = "linkDelete" })
             </td>
         </tr>
     }
