--- a/AplicaciónTrimestre/Views/Producto/Index.cshtml
+++ b/AplicaciónTrimestre/Views/Producto/Index.cshtml
@@ -1,27 +1,31 @@
 ﻿@model IEnumerable<AplicaciónTrimestre.Models.producto>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Productos";
 }
 
-<h2>Index</h2>
+<h2>Productos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Producto", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.nombre)
+            @*@Html.DisplayNameFor(model => model.nombre)*@
+            Nombre Producto
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.percio_unitario)
+            @*@Html.DisplayNameFor(model => model.percio_unitario)*@
+            Precio Unitario
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.descripcion)
+            @*@Html.DisplayNameFor(model => model.descripcion)*@
+            Descripción
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.cantidad)
+            @*@Html.DisplayNameFor(model => model.cantidad)*@
+            Cantidad
         </th>
         <th>
             @*@Html.DisplayNameFor(model => model.id_proveedor)*@
@@ -49,9 +53,9 @@
             @AplicaciónTrimestre.Controllers.ProductoController.NombreProveedor(item.id_proveedor)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id }, new { @class = "linkDelete"})
+            @Html.ActionLink("Editar", "Edit", new { id=item.id }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.id }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.id }, new { @class = "linkDelete"})
         </td>
     </tr>
 }
