--- a/AplicaciónTrimestre/Views/ProductoCompra/Details.cshtml
+++ b/AplicaciónTrimestre/Views/ProductoCompra/Details.cshtml
@@ -1,17 +1,18 @@
 ﻿@model AplicaciónTrimestre.Models.producto_compra
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>producto_compra</h4>
+    <h4>Producto Compra</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.id_compra)
+            @*@Html.DisplayNameFor(model => model.id_compra)*@
+            Fecha Compra:
         </dt>
 
         <dd>
@@ -20,7 +21,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.id_producto)
+            @*@Html.DisplayNameFor(model => model.id_producto)*@
+            Nombre Producto:
         </dt>
 
         <dd>
@@ -29,7 +31,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.cantidad)
+            @*@Html.DisplayNameFor(model => model.cantidad)*@
+            Cantidad:
         </dt>
 
         <dd>
@@ -39,6 +42,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.id }) |
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
