--- a/AplicaciónTrimestre/Views/Cliente/Details.cshtml
+++ b/AplicaciónTrimestre/Views/Cliente/Details.cshtml
@@ -1,17 +1,18 @@
 ﻿@model AplicaciónTrimestre.Models.cliente
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles Clientes";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>cliente</h4>
+    <h4>Cliente</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.nombre)
+            @*@Html.DisplayNameFor(model => model.nombre)*@
+            Nombre:
         </dt>
 
         <dd>
@@ -19,7 +20,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.documento)
+            @*@Html.DisplayNameFor(model => model.documento)*@
+            Documento Identidad:
         </dt>
 
         <dd>
@@ -27,7 +29,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email)
+            @*@Html.DisplayNameFor(model => model.email)*@
+            Correo:
         </dt>
 
         <dd>
@@ -37,6 +40,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.id }) |
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
