--- a/AplicaciónTrimestre/Views/Compra/Details.cshtml
+++ b/AplicaciónTrimestre/Views/Compra/Details.cshtml
@@ -1,17 +1,18 @@
 ﻿@model AplicaciónTrimestre.Models.compra
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles Compra";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>compra</h4>
+    <h4>Compra</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.fecha)
+            @*@Html.DisplayNameFor(model => model.fecha)*@
+            Fecha Compra:
         </dt>
 
         <dd>
@@ -19,7 +20,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.total)
+            @*@Html.DisplayNameFor(model => model.total)*@
+            Total:
         </dt>
 
         <dd>
@@ -27,7 +29,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.id_usuario)
+            @*@Html.DisplayNameFor(model => model.id_usuario)*@
+            Nombre Usuario:
         </dt>
 
         <dd>
@@ -36,7 +39,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.id_cliente)
+            @*@Html.DisplayNameFor(model => model.id_cliente)*@
+            Nombre Cliente:
         </dt>
 
         <dd>
@@ -47,6 +51,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.id }) |
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
