--- a/AplicaciónTrimestre/Views/ProductoCompra/Edit.cshtml
+++ b/AplicaciónTrimestre/Views/ProductoCompra/Edit.cshtml
@@ -1,55 +1,58 @@
 ﻿@model AplicaciónTrimestre.Models.producto_compra
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Producto Compra";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>producto_compra</h4>
+        <h4>Producto Compra</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.id_compra, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.id_compra, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.Action("ListarCompras")
-                @Html.ValidationMessageFor(model => model.id_compra, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="id_compra">Fecha Compra:</label>
+        @*@Html.LabelFor(model => model.id_compra, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @*@Html.EditorFor(model => model.id_compra, new { htmlAttributes = new { @class = "form-control" } })*@
+            @Html.Action("ListarCompras")
+            @Html.ValidationMessageFor(model => model.id_compra, "", new { @class = "text-danger", @type="date" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.id_producto, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.id_producto, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.Action("ListarProductos")
-                @Html.ValidationMessageFor(model => model.id_producto, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="id_producto">Nombre Producto:</label>
+        @*@Html.LabelFor(model => model.id_producto, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @*@Html.EditorFor(model => model.id_producto, new { htmlAttributes = new { @class = "form-control" } })*@
+            @Html.Action("ListarProductos")
+            @Html.ValidationMessageFor(model => model.id_producto, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.cantidad, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.cantidad, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.cantidad, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="cantidad">Cantidad:</label>
+        @*@Html.LabelFor(model => model.cantidad, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.cantidad, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.cantidad, "", new { @class = "text-danger" })
         </div>
+    </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Actualizar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
