--- a/AplicaciónTrimestre/Views/ProductoImagen/Index.cshtml
+++ b/AplicaciónTrimestre/Views/ProductoImagen/Index.cshtml
@@ -1,18 +1,19 @@
 ﻿@model IEnumerable<AplicaciónTrimestre.Models.producto_imagen>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Producto Imagen";
 }
 
-<h2>Index</h2>
+<h2>Producto Imagen</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nueva Imagen", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.imagen)
+            @*@Html.DisplayNameFor(model => model.imagen)*@
+            Imagen
         </th>
         <th>
             @*@Html.DisplayNameFor(model => model.id_producto)*@
@@ -32,9 +33,9 @@
                 @AplicaciónTrimestre.Controllers.ProductoImagenController.NombreProducto(item.id_producto)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.id }, new { @class = "linkDelete" })
+                @Html.ActionLink("Editar", "Edit", new { id = item.id }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.id }) |
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.id }, new { @class = "linkDelete" })
             </td>
         </tr>
     }
