--- a/AplicaciónTrimestre/Views/Proveedor/Details.cshtml
+++ b/AplicaciónTrimestre/Views/Proveedor/Details.cshtml
@@ -1,17 +1,18 @@
 ﻿@model AplicaciónTrimestre.Models.proveedor
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles Proveedor";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>proveedor</h4>
+    <h4>Proveedor</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.nombre)
+            @*@Html.DisplayNameFor(model => model.nombre)*@
+            Nombre:
         </dt>
 
         <dd>
@@ -19,7 +20,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.direccion)
+            @*@Html.DisplayNameFor(model => model.direccion)*@
+            Dirección:
         </dt>
 
         <dd>
@@ -27,7 +29,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.telefono)
+            @*@Html.DisplayNameFor(model => model.telefono)*@
+            Telefono:
         </dt>
 
         <dd>
@@ -35,7 +38,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.nombre_contacto)
+            @*@Html.DisplayNameFor(model => model.nombre_contacto)*@
+            Contacto:
         </dt>
 
         <dd>
@@ -45,6 +49,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.id }) |
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
