--- a/AplicaciónTrimestre/Views/UsuarioRol/Create.cshtml
+++ b/AplicaciónTrimestre/Views/UsuarioRol/Create.cshtml
@@ -1,45 +1,47 @@
 ﻿@model AplicaciónTrimestre.Models.usuariorol
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Registrar Usuario Rol";
 }
 
-<h2>Create</h2>
+<h2>Registrar</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>usuariorol</h4>
+        <h4>Usuario Rol</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.idUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.idUsuario, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.Action("ListarUsuarios")
-                @Html.ValidationMessageFor(model => model.idUsuario, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="idUsuario">Nombre Usuario:</label>
+        @*@Html.LabelFor(model => model.idUsuario, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @*@Html.EditorFor(model => model.idUsuario, new { htmlAttributes = new { @class = "form-control" } })*@
+            @Html.Action("ListarUsuarios")
+            @Html.ValidationMessageFor(model => model.idUsuario, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.idRol, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.idRol, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.Action("ListarRoles")
-                @Html.ValidationMessageFor(model => model.idRol, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="idrol">Rol:</label>
+        @*@Html.LabelFor(model => model.idRol, htmlAttributes: new { @class = "control-label col-md-2" })*@
+        <div class="col-md-10">
+            @*@Html.EditorFor(model => model.idRol, new { htmlAttributes = new { @class = "form-control" } })*@
+            @Html.Action("ListarRoles")
+            @Html.ValidationMessageFor(model => model.idRol, "", new { @class = "text-danger" })
         </div>
+    </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Registrar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
