--- a/AplicaciónTrimestre/Views/UsuarioRol/Details.cshtml
+++ b/AplicaciónTrimestre/Views/UsuarioRol/Details.cshtml
@@ -1,17 +1,18 @@
 ﻿@model AplicaciónTrimestre.Models.usuariorol
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles Usuario Rol";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>usuariorol</h4>
+    <h4>Usuario Rol</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.idUsuario)
+            @*@Html.DisplayNameFor(model => model.idUsuario)*@
+            Usuario:
         </dt>
 
         <dd>
@@ -20,7 +21,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.idRol)
+            @*@Html.DisplayNameFor(model => model.idRol)*@
+            Rol:
         </dt>
 
         <dd>
@@ -31,6 +33,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.id }) |
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
