--- a/AplicaciónTrimestre/Views/UsuarioRol/Index.cshtml
+++ b/AplicaciónTrimestre/Views/UsuarioRol/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<AplicaciónTrimestre.Models.usuariorol>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Usuario Rol";
 }
 
-<h2>Index</h2>
+<h2>Usuario Rol</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Usuario Rol", "Create")
 </p>
 <table class="table">
     <tr>
@@ -34,9 +34,9 @@
                 @AplicaciónTrimestre.Controllers.UsuarioRolController.DescripcionRol(item.idRol)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.id }, new { @class = "linkDelete" })
+                @Html.ActionLink("Editar", "Edit", new { id = item.id }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.id }) |
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.id }, new { @class = "linkDelete" })
             </td>
         </tr>
     }
