Creando Y Agregando Login Al Proyecto

--- a/AplicaciónTrimestre/Views/Shared/_Layout.cshtml
+++ b/AplicaciónTrimestre/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        Opciones 
-                        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+                            Opciones
+                            <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Cliente CRUD", "Index", "Cliente")</li>
@@ -37,10 +37,14 @@
                             <li>@Html.ActionLink("Proveedor CRUD", "Index", "Proveedor")</li>
                             <li>@Html.ActionLink("Compra CRUD", "Index", "Compra")</li>
                             <li>@Html.ActionLink("Producto CRUD", "Index", "Producto")</li>
-                            <li>@Html.ActionLink("Producto Compra CRUD", "Index", "ProductoCompra")</li>                        
-                            <li>@Html.ActionLink("Producto Imagen CRUD", "Index", "ProductoImagen")</li>   
-                        </ul> 
+                            <li>@Html.ActionLink("Producto Compra CRUD", "Index", "ProductoCompra")</li>
+                            <li>@Html.ActionLink("Producto Imagen CRUD", "Index", "ProductoImagen")</li>
+                        </ul>
                     </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {   
+                         <li>@Html.ActionLink("Cerrar Sesión", "CloseSession", "Usuario")</li>
+                    }
                 </ul>
             </div>
         </div>
