Creando Vista Plantilla, Creando Modelo Custom Reporte (Producto-Proveedor)  y utilizandolo

--- a/AplicaciónTrimestre/Views/Home/Contact.cshtml
+++ b/AplicaciónTrimestre/Views/Home/Contact.cshtml
@@ -1,6 +1,13 @@
 ﻿@{
     ViewBag.Title = "Contact";
+    Layout = "~/Views/Shared/Plantilla.cshtml";
 }
+
+@section textoParrafo
+{
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+}
+
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
