--- a/AplicaciónTrimestre/Views/Shared/_Layout.cshtml
+++ b/AplicaciónTrimestre/Views/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
                             <li>@Html.ActionLink("Producto CRUD", "Index", "Producto")</li>
                             <li>@Html.ActionLink("Producto Compra CRUD", "Index", "ProductoCompra")</li>
                             <li>@Html.ActionLink("Producto Imagen CRUD", "Index", "ProductoImagen")</li>
+                            <li>@Html.ActionLink("Reporte Producto-Proveedor", "Reporte", "Producto")</li>
+                            <li>@Html.ActionLink("Factura Compra", "FacturaCompra", "Compra")</li>
                         </ul>
                     </li>
                     @if (User.Identity.IsAuthenticated)
