Cambiando el .css de Index de home, agregando descripción del proyecto y redireccionando el boton de la descripción al Git Hub

--- a/AplicaciónTrimestre/Views/Home/Index.cshtml
+++ b/AplicaciónTrimestre/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>SOFTWARE DE INVENTARIOS</h1>
+    <p class="lead">Sistema de información de inventarios conectado a una base de datos donde podemos agregar datos de usuarios, productos, clientes, proveedores y demas, cuenta con un login de acceso y cierre de sesión</p>
+    <p><a href="https://github.com/Juanicolasmg" class="btn btn-primary btn-lg">Git Hub &raquo;</a></p>
 </div>
 
 <div class="row">
