--- a/AplicaciónTrimestre/Views/Shared/_Layout.cshtml
+++ b/AplicaciónTrimestre/Views/Shared/_Layout.cshtml
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Aplicación Juanicolasmg</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/Custom.css")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -62,7 +63,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="Footer">
             <p>&copy; @DateTime.Now.Year - Deb By: Juanicolasmg</p>
         </footer>
     </div>
