--- a/AplicaciónTrimestre/Views/Proveedor/Index.cshtml
+++ b/AplicaciónTrimestre/Views/Proveedor/Index.cshtml
@@ -59,6 +59,10 @@
     @Html.ActionLink("Carga Masiva", "uploadCSV")
 </p>
 
+<p>
+    @Html.ActionLink("Paginador", "paginadorIndex")
+</p>
+
 @section scripts{
     <script>
         $(".linkDelete").click(function (event) {
