Creando cargue de imagen y mostrando imagen en detalles de producto

--- a/AplicaciónTrimestre/Views/Producto/Details.cshtml
+++ b/AplicaciónTrimestre/Views/Producto/Details.cshtml
@@ -56,6 +56,15 @@
             @AplicaciónTrimestre.Controllers.ProductoController.NombreProveedor(Model.id_proveedor)
         </dd>
 
+        <dt>
+            Imagen:
+        </dt>
+
+        <dd>
+            <img class="img-responsive" src="@Url.Content("~/" + ViewBag.imagen)" alt="Image" />
+            @*<img src="@Url.Content("~/" + ViewBag.imagen)" alt="Image" />*@
+        </dd>
+
     </dl>
 </div>
 <p>
