--- a/AplicaciónTrimestre/Views/Producto/Index.cshtml
+++ b/AplicaciónTrimestre/Views/Producto/Index.cshtml
@@ -62,6 +62,10 @@
 
 </table>
 
+<p>
+    @Html.ActionLink("Carga Masiva", "uploadCSV")
+</p>
+
 @section scripts{
     <script>
         $(".linkDelete").click(function (event) {
