--- a/AplicaciónTrimestre/Views/ProductoImagen/Index.cshtml
+++ b/AplicaciónTrimestre/Views/ProductoImagen/Index.cshtml
@@ -42,6 +42,10 @@
 
 </table>
 
+<p>
+    @Html.ActionLink("Cargar Imagen", "CargarImagen")
+</p>
+
 @section scripts{
     <script>
         $(".linkDelete").click(function (event) {
